versions/v2.9/modules/en/pages/observability/monitoring-and-dashboards/uninstall-monitoring.adoc
= Uninstall Monitoring
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/monitoring-alerting-guides/uninstall-monitoring 
:product-path: observability/monitoring-and-dashboards/uninstall-monitoring

. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. In the left navigation bar, click *Apps*.
. Click *Installed Apps*.
. Go to the `cattle-monitoring-system` namespace and check the boxes for `rancher-monitoring-crd` and `rancher-monitoring`.
. Click *Delete*.
. Confirm *Delete*.

*Result:* `rancher-monitoring` is uninstalled.

[NOTE]
.Persistent Grafana Dashboards:
====

For users who are using Monitoring V2 v9.4.203 or below, uninstalling the Monitoring chart will delete the cattle-dashboards namespace, which will delete all persisted dashboards, unless the namespace is marked with the annotation `helm.sh/resource-policy: "keep"`. This annotation is added by default in Monitoring V2 v14.5.100+ but can be manually applied on the cattle-dashboards namespace before an uninstall if an older version of the Monitoring chart is currently installed onto your cluster.
====

